# claude-agents-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTEGRATION_TESTING_PLAN.md  INTEGRATION_TESTING_TASKS.md  PLAN.md  README.md  TESTING.md  UPSTREAM.md
.github/workflows/: ci.yml
examples/: agents.rs  error_handling.rs  filesystem_agents.rs  hooks.rs  include_partial_messages.rs  max_budget_usd.rs  mcp_calculator.rs  quick_start.rs  setting_sources.rs  simple_query.rs  stderr_callback.rs  streaming_client.rs  streaming_mode.rs  streaming_progress.rs  system_prompt.rs  tool_permission_callback.rs  tools_option.rs  with_tools.rs
src/: client.rs  errors.rs  lib.rs  mcp.rs  query.rs  types.rs
src/_internal/: client.rs  message_parser.rs  mod.rs  query.rs
src/_internal/transport/: mod.rs  subprocess.rs
tests/: cli_integration.rs  test_client.rs  test_errors.rs  test_integration.rs  test_message_parser.rs  test_streaming_client.rs  test_tool_callbacks.rs  test_transport.rs  test_types.rs
tests/integration/: helpers.rs  mod.rs  test_callbacks.rs  test_cancellation.rs  test_client.rs  test_concurrent.rs  test_context.rs  test_core.rs  test_edge_cases.rs  test_errors.rs  test_hooks.rs  test_resources.rs  test_results.rs  test_system_prompt.rs  test_tools.rs
