[package]
name = "claude-agents-sdk"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
authors = ["Jimmy Stridh"]
description = "Rust SDK for building agents with Claude Code CLI"
license = "MIT"
repository = "https://github.com/jimmystridh/claude-agents-sdk"
keywords = ["claude", "ai", "agents", "anthropic", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "process", "sync", "time", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync", "io-util"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
semver = "1.0"
tempfile = "3.9"
which = "8.0"

# Optional MCP support
mcp-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_assertions = "1.4"
mockall = "0.14"
proptest = "1.4"
tempfile = "3.9"

[features]
default = []
mcp = ["mcp-core"]
# Enable integration tests that require Claude CLI and make API calls
integration-tests = []
# Enable stress tests (run with --ignored flag)
stress-tests = []

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"

[[example]]
name = "streaming_client"
path = "examples/streaming_client.rs"

[[example]]
name = "with_tools"
path = "examples/with_tools.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
